Fix high contrast mode issues

--- a/scss/modal.scss
+++ b/scss/modal.scss
@@ -25,6 +25,9 @@
     padding: 0;
     margin: 0;
     width: 50vw;
+    border-left: white 1px solid;
+    border-right: white 1px solid;
+    border-bottom: white 1px solid;
   }
 
   &.nav-modal .bx--modal-header {
